Implemented more UI
